# formulaic

./: .gitignore  .justfile  Cargo.toml  README.md
.github/workflows/: release.yml
src/: formula.rb  gh_strategy.rb  main.rs
