[package]
name = "formulaic"
description = "Update a Homebrew tap formula for a Rust project from its latest github release."
version = "0.4.0"
edition = "2024"
authors = ["C J Silverio <ceejceej@gmail.com>"]
license = "Parity-7.0.0"
readme = "README.md"
repository = "https://github.com/ceejbot/formulaic"
homepage = "https://github.com/ceejbot/formulaic"

[dependencies]
anyhow = "1.0.98"
cargo_toml = "0.22.1"
clap = { version = "4.5.39", features = ["derive", "wrap_help"] }
heck = "0.5.0"
hex = "0.4.3"
roctogen = "0.36.0"
roctokit = { version = "0.15.0", features = ["ureq"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
upon = "0.9.0"
ureq = "3.0.11"

[lints.rust]
unsafe_code = { level = "deny", priority = 1 }
future_incompatible = { level = "deny", priority = 2 }
trivial_casts = { level = "warn", priority = 3 }
rust_2018_idioms = { level = "warn", priority = 4 }

[lints.clippy]
unwrap_used = "deny"

[profile.release]
lto = "thin"
